2008-06-05  Ethan Merritt  <merritt@u.washington.edu>

	* src/axis.c (gen_tics):  Interpret tic labels read from a data file as
	string constants rather than as formats.  Otherwise there are problems
	with labels containing the "%" character.

2008-06-05  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/mouse.c (builtin_toggle_log): Help line for the 'l' hotkey missed
	to mention both z and cb for splots.

2008-06-04  Ethan Merritt  <merritt@u.washington.edu>

	* src/mouse.c (builtin_nearest_log):
	Further adjustment to 'L' hotkey behavior.  In "set view map" mode,
	toggle the cb axis if the cursor is in the color box, toggle the x1 axis
	if it is nearest, the y1 axis if it is nearest, and the z axis if none
	of the above conditions is true.

	* demo/heatmaps.dem:  Modify the last demo so that it can be used to
	explore the behavior of the 'l' and 'L' hotkeys. All 4 axes (x y z cb)
	can be individually toggled using the 'L' hotkey.  'l' toggles only y,
	which is what the documentation says, but maybe this should be changed.

	* src/graph3d.c: Allow to draw contours associated with a pm3d surface.

2008-06-02  Ethan Merritt  <merritt@u.washington.edu>

	* src/hidden3d.c (store_polygon) src/mouse.c (event_motion):
	Replace a pair of assert() statements with a flag that prevents mouse
	interaction from further increasing the value of surface_zscale. This
	means you cannot trigger the error condition the asserts tried to guard 
	against just by moving the mouse.  You can still trigger it by setting
	the view parameters to something odd, but the patch of 2008-05-29 may
	handle that. 
	Bug #172806

	* src/term.c (estimate_strlen) term/estimate.trm:
	Allow for embedded newlines when estimating string length and height.

	* src/graphics.h src/graphics.c src/gadgets.h src/graph3d.c src/color.c
	src/mouse.c:  Move the bounding box information for the key and for the
	colorbox into their respective structures so that they can be shared by