@@ -36,10 +36,10 @@ set hidden3d
 set ticslevel 0
 unset xtics ; unset ytics ; unset ztics
 unset border ; unset colorbox ; unset key
-set lmargin screen 0.1
-set bmargin screen 0.1
-set rmargin screen 0.9
-set tmargin screen 0.9
+set lmargin at screen 0.1
+set bmargin at screen 0.1
+set rmargin at screen 0.9
+set tmargin at screen 0.9
 
 set parametric
 set dummy u,v
