@@ -1,3 +1,12 @@
+2008-06-07  Ethan Merritt  <merritt@u.washington.edu>
+
+	* src/set.c (set_margin) src/save.c (save_set_all) docs/gnuplot.doc
+	demo/margins.dem demo/transparent_solids.dem demo/rgbalpha.dem:
+	Add keyword "at" to absolute margin placement commands.
+	'set rmargin screen .8' misleadingly seem to assign 80% of the page
+	to the right margin.  Really we mean "set rmargin at screen 0.8",
+	so say that.
+
 2008-06-05  Ethan Merritt  <merritt@u.washington.edu>
 
 	* src/axis.c (gen_tics):  Interpret tic labels read from a data file as
